Add Code Style checks and fix style